#+STARTUP: showeverything

* Changelog

** 0.11
- Split the Types module into smaller sub modules, and restricting
  what is exported.
- Traversable, Foldable, and Functor instances for the ipe types.
- Reading and Writing of Ellipses :)
- Added Coordinate Float and IpeWriteText Float instances.

** 0.10

- Added a 'labeled' IpeOut that supports labeling geometric objects
  with some textual label
- IpeWrite instance for NonEmpty Lists, and IpeWriteText and
  Coordinate instances for Data.RealNumber.Rational

** 0.9

- First release in which hgeometry-ipe was split off from hgeometry.