@@ -12,7 +12,7 @@ import           Data.Geometry.Interactive.ICanvas hiding (update, view)
 import           Data.Geometry.Box
 import           Data.Geometry.Interactive.Writer
 import           Data.Geometry.Ipe (IpePage, content, readSinglePageFile, _IpePath)
-import           Data.Geometry.Ipe.Attributes (Sing(..), attrLens)
+import           Data.Geometry.Ipe.Attributes (Sing(..))
 import           Data.Geometry.Ipe.Color
 import           Data.Geometry.Ipe.FromIpe (_withAttrs, _asSomePolygon)
 import           Data.Geometry.Point
