@@ -8,6 +8,10 @@
 - Traversable, Foldable, and Functor instances for the ipe types.
 - Reading and Writing of Ellipses :)
 - Added Coordinate Float and IpeWriteText Float instances.
+- readAll now accepts only one IpePage rather than a Foldable f => f
+  (IpePage r)
+- Renamed attrLens to ixAttr, and added a prism _Attr to access an
+  attribute._
 
 ** 0.10
 
